# LiVAE

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  __init__.py  agent.py  environment.py  manual_api_test.py  model.py  module.py  pyproject.toml  requirements.txt  review-points.md  start_services.py  utils.py
.github/workflows/: ci.yml  publish.yml
api/: main.py  models.py  utils.py
frontend/: next.config.ts  package-lock.json  package.json  start.ts
frontend/src/app/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/data/: DataSummaryCard.tsx  FileUpload.tsx  UploadView.tsx  ui.tsx
frontend/src/components/monitor/: CurrentMetricsCard.tsx  MetricsChart.tsx  MetricsChartsSection.tsx  TrainingMonitor.tsx  TrainingStatusCard.tsx  constants.ts
frontend/src/components/results/: AnalysisTab.tsx  DownloadSection.tsx  MetricsTab.tsx  ResultsHeader.tsx  ResultsView.tsx  TrainingSummaryCard.tsx  ui.tsx
frontend/src/components/shared/: FileUpload.tsx
frontend/src/components/training/: AgentParametersForm.tsx  DatasetSummaryCard.tsx  QCParametersForm.tsx  TrainingConfigForm.tsx  TrainingSettingsForm.tsx
frontend/src/lib/api/: client.ts  endpoints.ts
frontend/src/lib/hooks/: useAppStatus.ts  useDataUpload.ts  useResults.ts  useTrainingConfig.ts  useTrainingMonitor.ts
frontend/src/types/: index.ts
livae/: __init__.py  agent.py  environment.py  mixin.py  module.py
notebooks/: 01_basic_usage.ipynb  02_advanced_regularization.ipynb  03_real_data_analysis.ipynb  README.md
tests/: test_import.py
(+3 files in other folders)
